show for everyone except me...

Please let me know if it worked...

-------------------------------------------------------------------------------

Fri Nov 12 19:14:21 GMT 1999
(gilbertt)

More E-SD.c changes. Should be better, but let me know if any lag occurs.

-------------------------------------------------------------------------------

Fri Nov 12 12:35:49 PST 1999
(KainX)

Cleaning up the epplets is becoming a morning routine for me.... =P

-------------------------------------------------------------------------------

Fri Nov 12 15:37:46 PST 1999
(KainX)

Some UI changes to make E-Exec a little more friendly. :-)

-------------------------------------------------------------------------------

Fri Nov 12 15:57:40 PST 1999
(KainX)

Wrap-around history.

-------------------------------------------------------------------------------

Sat Nov 13 00:34:12 GMT 1999
(gilbertt)

Thanks to code from Steve Brunton <brunton@dweeb.turner.com>, E-Mixer should
now support IRIX. Please test this for me you funny hardware people you ;-)

-------------------------------------------------------------------------------

Sat Nov 13 21:03:02 GMT 1999
(gilbertt)

Changes to : E-ScreenShoot.[ch] clock.[ch]

Renamed "Rotator" to "Mesh", and added new cloak-animation, "Funky Mesh"

I was bored. Ok?

-------------------------------------------------------------------------------

Sun Nov 14 00:33:11 GMT 1999
(gilbertt)

Added E-ScreenSave. Will control xscreensaver, but currently just locks the
screen on demand.

-------------------------------------------------------------------------------

Sun Nov 14 01:34:43 GMT 1999
(gilbertt)

Should have quashed all lag in E-SD. Please let me know

-------------------------------------------------------------------------------

Sun Nov 14 02:24:13 GMT 1999
(gilbertt)

Added new animation to E-SD, called history, it is responsive to sound, and
will hopefully keep StriderZ off my back for a day or two :P
