@@ -571,3 +571,10 @@ Sun Nov 14 02:24:13 GMT 1999
 Added new animation to E-SD, called history, it is responsive to sound, and
 will hopefully keep StriderZ off my back for a day or two :P
 
+-------------------------------------------------------------------------------
+
+Sun Nov 14 02:53:54 GMT 1999
+(gilbertt)
+
+Added another animation to E-SD, "History Bar", its cooler.
+
